syntax = "proto3";

import "google/protobuf/empty.proto";
option csharp_namespace = "GrpcHw.Task2.Server";

package secret;

service SecretService {
  rpc GetSecret(google.protobuf.Empty) returns(GetSecretResponse);
}


message GetSecretResponse {
  string secret = 1;
}